Modificacion del logo

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <div>
         <header>
         <button>Descargar cv</button>
-        <img src="./img/LogoParaFigma-removebg-preview.png" class="logo">
+        <img src="./img/Logo.png" class="logo">
         <button>Cont&aacute;ctame</button>
         </header>
     </div>
@@ -43,7 +43,7 @@
 
 <div class="tarjetas">
     <div class="negras">
-        
+
     </div>
 </div>
 
