Agregación de estilos a las tarjetas.

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,13 @@
 </div>
 
 <div class="tarjetas centrados">
+    <a href="https://www.figma.com/design/P204uxT8CKozGXGTIT8333/Portfolio?node-id=0-1&t=Qebf5LvVVtEPUvlx-1">
     <div class="amarillos tarjeta">
-        <img src="">
-        <h2>Titulo</h2>
+        <img src="./img/Proyectos/PortfolioFigma.png">
+        <h2>Portfolio en figma</h2>
+        <p>Portfolio desarrollado con la aplicación figma</p>
     </div>
+    </a>
     <div class="azules tarjeta">
         <img src="">
         <h2>Titulo</h2>
