Corregir imagen del portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,13 +33,16 @@
     <div class="amarillos tarjeta">
         <img src="./img/Proyectos/PortfolioFigma.png">
         <h2>Portfolio en figma</h2>
-        <p>Portfolio desarrollado con la aplicación figma</p>
+        <p>Portfolio desarrollado con la aplicación figma en el que se encuentra la guía de estilos y el diseño original del portfolio.</p>
     </div>
     </a>
+    <a href="https://github.com/MiguelAngel313/Portfolio.git">
     <div class="azules tarjeta">
-        <img src="">
+        <img src="./img/Proyectos/PortfolioGithub.png">
         <h2>Titulo</h2>
+        <p>portfolio desarrollado en html y css basado en el diseño del portfolio de figma.</p>
     </div>
+    </a>
 </div>
 
 <div class="centrados">
