Continuar agregando el menú de contacto y corregir error de tarjetas negras.

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,8 @@
             <img src="./img/Logos/html-1.svg">
             <img src="./img/Logos/css-3.svg">
         </div>
+        </div>
+<div class="tarjetas centrados">
         <div class="negras">
             <h2>Herramientas</h2>
             <img src="./img/Logos/visual-studio-code-1.svg">
