Continuar editando el contenedor de contacto.

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,20 @@
         <img src="./img/Logo.png" class="logo">
         <button class="amarillos derecha">Cont&aacute;ctame</button>
         
+        <div class="contacto">
+            <a href="https://www.linkedin.com/in/miguel-%C3%A1ngel-herrojo-gonz%C3%A1lez-76a9a0304/">
+            <img src="./img/Contacto/linkedin-icon-3.svg">
+            </a>
+            <a href="">
+            <img src="./img/Contacto/github-icon-2.svg">
+            </a>
+            <a href="">
+            <img src="./img/Contacto/instagram-2016-5.svg">
+            </a>
+
+            <button class="volver">❌</button>
+        </div>
+
     </div>
 
     <div class="centrados">
@@ -29,7 +43,7 @@
     <h1>Proyectos</h1>
 </div>
 
-<div class="centrados">
+<div class="tarjetas centrados">
     <a href="https://www.figma.com/design/P204uxT8CKozGXGTIT8333/Portfolio?node-id=0-1&t=Qebf5LvVVtEPUvlx-1">
     <div class="amarillos tarjeta">
         <img src="./img/Proyectos/PortfolioFigma.png">
@@ -51,7 +65,7 @@
     <h1>Tecnologías</h1>
 </div>
 
-<div class="tarjetas centrados">
+<div class="tarjetasNegras centrados">
         <div class="negras">
             <h2>Backend</h2>
             <img src="./img/Logos/javascript-r.svg">
@@ -62,8 +76,6 @@
             <img src="./img/Logos/html-1.svg">
             <img src="./img/Logos/css-3.svg">
         </div>
-        </div>
-<div class="tarjetas centrados">
         <div class="negras">
             <h2>Herramientas</h2>
             <img src="./img/Logos/visual-studio-code-1.svg">
@@ -72,10 +84,9 @@
         </div>
         <div class="negras">
             <h2>Aprendiendo</h2>
-            <img src="./img/Logos/html-1.svg">
-            <img src="./img/Logos/css-3.svg">
+            <img src="./img/Logos/c.svg">
         </div>
-</div>
+    </div>
 
 
 
