Script de menú desplegable completamente funcional. Continuar agregando curriculum de descarga.

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,20 +13,20 @@
         <button class="azules blanco izquierda">Descargar cv</button>
         </a>
         <img src="./img/Logo.png" class="logo">
-        <button class="amarillos derecha">Cont&aacute;ctame</button>
+        <button class="amarillos derecha" id="contacto">Cont&aacute;ctame</button>
         
         <div class="contacto">
             <a href="https://www.linkedin.com/in/miguel-%C3%A1ngel-herrojo-gonz%C3%A1lez-76a9a0304/">
             <img src="./img/Contacto/linkedin-icon-3.svg">
             </a>
-            <a href="">
+            <a href="https://github.com/MiguelAngel313">
             <img src="./img/Contacto/github-icon-2.svg">
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/_.miguelhg/">
             <img src="./img/Contacto/instagram-2016-5.svg">
             </a>
 
-            <button class="volver">❌</button>
+            <!-- <button class="volver" id="cerrar">❌</button> -->
         </div>
 
     </div>
@@ -85,6 +85,7 @@
         <div class="negras">
             <h2>Aprendiendo</h2>
             <img src="./img/Logos/c.svg">
+            <img src="./img/Logos/python-5.svg">
         </div>
     </div>
 
