Trabajo completamente terminado.

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="cabecera">
-        <a href="./img/Logo.png" download>
+        <a href="https://drive.google.com/file/d/1GBmKU8dnIySHs2BXOtKukAclxO8Vw13y/view?usp=sharing" download>
         <button class="azules blanco izquierda">Descargar cv</button>
         </a>
         <img src="./img/Logo.png" class="logo">
